<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLE Demo - Simple Controls</string>
    <string name="action_settings">Settings</string>
    <string name="Rssi">RSSI</string>
    <string name="rssiValue">---</string>
    <string name="serRx">SER RX</string>
    <string name="serRxValue">---</string>
    <string name="serTxBtnTxt">Send</string>
    <string name="serTxHint">Message</string>
    <string name="digitalOut">Digital Out</string>
    <string name="digitalIn">Digital In</string>
    <string name="Pin">Pin</string>
    <string name="pinValue4">[ 2 ]</string>
    <string name="pinValue5">[ A4 ]</string>
    <string name="pinValue6">[ 3 ]</string>
    <string name="pinValue7">[ 5 ]</string>
    <string name="pinValueA5">[ A5 ]</string>
    <string name="write">write</string>
    <string name="read">read</string>
    <string name="PWM">PWM</string>
    <string name="Servo">Servo</string>
    <string name="AnalogIn">Analog In</string>
    <string name="AIText">----</string>
    <string name="connect">Connect</string>
    <string name="loading">Refreshing......</string>

</resources>
